--- a/.github/workflows/build n' deploy.yml
+++ b/.github/workflows/build n' deploy.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
   schedule:
-  - cron: "0 */12 * * *"
+  - cron: "0 */6 * * *"
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Build
-        run: python main.py
+        run: python build.py
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
