Improve compatibility with older web servers

--- a/.gitignore
+++ b/.gitignore
@@ -160,19 +160,19 @@ cython_debug/
 #.idea/
 
 index.html
-bs.html
-da.html
-de.html
-el.html
-es.html
-fi.html
-fr.html
-he.html
-ko.html
-no.html
-pl.html
-pt.html
-ru.html
-sco.html
-sv.html
-vi.html
+bs/
+da/
+de/
+el/
+es/
+fi/
+fr/
+he/
+ko/
+no/
+pl/
+pt/
+ru/
+sco/
+sv/
+vi/
