Add config option to enable 512KB Club green badge

--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,7 @@ Disallow: /cgi-bin/"""
 
 # Enable sitemap.xml generation. It will be added to robots.txt.
 generate_sitemap = true
+
+# Add 512KB Club "Green Team" badge to the footer if your site qualifies
+# See https://512kb.club/faq
+512kb_club_badge = true
